All_Component_DX/force-app/main/default/objects/Stock_History__c/Stock_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>All ServiceMax transactions such as RMA, Shipment, Parts Receipt etc. that impact inventory are recorded in this object</description>
    <label>Stock History</label>
    <nameField>
        <displayFormat>SHIST-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>