All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>Change Type Indicates if the type of change in product quantity was “Increase” or “Decrease”.</description>
    <inlineHelpText>Change Type Indicates if the type of change in product quantity was “Increase” or “Decrease”.</inlineHelpText>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>