All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the salesforce user that has initiated original transaction which resulted in stock change.</description>
    <inlineHelpText>Name of the salesforce user that has initiated original transaction which resulted in stock change.</inlineHelpText>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stock_History_Changed_By</relationshipName>
    <type>Lookup</type>
</CustomField>