All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Price of the product from the default pricebook at the time of transaction.</description>
    <inlineHelpText>Price of the product from the default pricebook at the time of transaction</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>