All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed__c</fullName>
    <description>Date/time when the change in product stock was made.</description>
    <inlineHelpText>Date/time when the change in product stock was made.</inlineHelpText>
    <label>Date Changed</label>
    <type>DateTime</type>
</CustomField>