All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Inventory_Process__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inventory process that resulted in this stock transaction.</description>
    <label>Inventory Process</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Stock History</relationshipLabel>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>