All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current physical location of the product. This is a lookup to an existing site record.</description>
    <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Location</relationshipName>
    <type>Lookup</type>
</CustomField>