All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Negative_Stock__c.field-meta.xml
<CustomField>
    <fullName>Negative_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if this transaction resulted in negative stock or not.</description>
    <inlineHelpText>Flag indicates if this transaction resulted in negative stock or not.</inlineHelpText>
    <label>Negative Stock</label>
    <type>Checkbox</type>
</CustomField>