All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Notified_User__c.field-meta.xml
<CustomField>
    <fullName>Notified_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User notified of negative stock. Reference to an existing Salesforce user record.</description>
    <inlineHelpText>User notified of negative stock. Reference to an existing Salesforce user record.</inlineHelpText>
    <label>Notified User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stock_History_Notified_User</relationshipName>
    <type>Lookup</type>
</CustomField>