All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Quantity_after_change2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_after_change2__c</fullName>
    <description>Stock quantity in the given product+location+status after the transaction.</description>
    <inlineHelpText>Stock quantity in the given product+location+status after the transaction.</inlineHelpText>
    <label>Qty after change</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>