All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the RMA/Shipment Order.</description>
    <inlineHelpText>Reference to the RMA/Shipment Order.</inlineHelpText>
    <label>RMA</label>
    <referenceTo>RMA_Shipment_Order__c</referenceTo>
    <relationshipName>Stock_History_RMA</relationshipName>
    <type>Lookup</type>
</CustomField>