All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Service_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the service order line.</description>
    <inlineHelpText>Reference to the service order line.</inlineHelpText>
    <label>Work Details</label>
    <referenceTo>Service_Order_Line__c</referenceTo>
    <relationshipLabel>Stock History</relationshipLabel>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>