All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Shipment_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the RMA/Shipment Line.</description>
    <inlineHelpText>Reference to the RMA/Shipment Line.</inlineHelpText>
    <label>Shipment Line</label>
    <referenceTo>RMA_Shipment_Line__c</referenceTo>
    <relationshipName>Stock_History_Shipment_Line</relationshipName>
    <type>Lookup</type>
</CustomField>