All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Stock_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Stock_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Stock Adjustment.</description>
    <inlineHelpText>Reference to the Stock Adjustment.</inlineHelpText>
    <label>Stock Adjustment</label>
    <referenceTo>Stock_Adjustment__c</referenceTo>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>