All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Stock_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Stock Transfer.</description>
    <inlineHelpText>Reference to the Stock Transfer.</inlineHelpText>
    <label>Stock Transfer</label>
    <referenceTo>Stock_Transfer__c</referenceTo>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>