All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Transaction_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Quantity2__c</fullName>
    <description>Product quantity in the source transaction.</description>
    <inlineHelpText>Product quantity in the source transaction.</inlineHelpText>
    <label>Transaction Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>