All_Component_DX/force-app/main/default/objects/Stock_History__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Status should be be assigned based on various original transactions which resulted in stock change.</description>
    <inlineHelpText>Status should be be assigned based on various original transactions which resulted in stock change.</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RMA Receipt</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>SVO Receipt</fullName>
            </value>
            <value>
                <fullName>SVO Usage</fullName>
            </value>
            <value>
                <fullName>Parts Receipt</fullName>
            </value>
            <value>
                <fullName>Stock Transfer</fullName>
            </value>
            <value>
                <fullName>Stock Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>