All_Component_DX/force-app/main/default/objects/Stock_History__c/recordTypes/Serial_History.recordType-meta.xml
<RecordType>
    <fullName>Serial_History</fullName>
    <active>true</active>
    <description>Serial History</description>
    <label>Serial History</label>
</RecordType>